--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,10 +14,30 @@
   }
 }
 
+
+/* Custom dark scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #272626; /* Dark background for the scrollbar track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #353535; /* Dark gray scrollbar thumb */
+  border-radius: 10px;
+  border: 2px solid #191919; /* Adds padding between the thumb and track */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #4b4a4a; /* Slightly lighter on hover */
+}
+
 body {
   color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background: black;
+  font-family: 'Fredoka', sans-serif;
 }
 
 @layer utilities {
